import { cleanup, render, waitFor, within } from "@testing-library/react";
import axe from "axe-core";
import { afterEach, beforeEach, describe, expect, test } from "vitest";

import { Accordion } from "@/components/accordion/accordion";

import "@/styles/test.css";

const TITLE = "This is a title";
const CHILDREN =
  "If you do too much it's going to lose its effectiveness. Look around. Look at what we have. Beauty is everywhere you only have to look to see it.";

afterEach(cleanup);

describe("accordion [unit]", () => {
  test("it opens", async () => {
    const result = render(
      <Accordion title={TITLE} defaultOpen={false}>
        {CHILDREN}
      </Accordion>,
    );

    within(result.container).getByRole("button").click();
    await waitFor(() =>
      expect(
        result.container.querySelector(".vesper-accordion-children"),
      ).not.toBeNull(),
    );
  });

  test("it closes", async () => {
    const result = render(
      <Accordion title={TITLE} defaultOpen>
        {CHILDREN}
      </Accordion>,
    );

    within(result.container).getByRole("button").click();
    await waitFor(() =>
      expect(
        result.container.querySelector(".vesper-accordion-children"),
      ).toBeNull(),
    );
  });

  test("custom className", () => {
    const result = render(
      <Accordion title={TITLE} className="custom-class">
        {CHILDREN}
      </Accordion>,
    );

    const el = result.container.firstChild;
    expect(el).toHaveClass("vesper-accordion");
    expect(el).toHaveClass("custom-class");
  });
});

describe("accordion [snapshot]", () => {
  test("closed", () => {
    // instead of rendering text content for snapshot tests, we render a div with a fixed height, because subpixel rendering differences between local machines and CI machines affects the output of radix's computed css values such as --radix-collapsible-content-height
    const result = render(
      <Accordion title={TITLE} open={false}>
        <div style={{ height: 200 }} />
      </Accordion>,
    );

    expect(result.container.firstChild).toMatchSnapshot();
  });

  test("open", () => {
    // instead of rendering text content for snapshot tests, we render a div with a fixed height, because subpixel rendering differences between local machines and CI machines affects the output of radix's computed css values such as --radix-collapsible-content-height
    const result = render(
      <Accordion title={TITLE} open>
        <div style={{ height: 200 }} />
      </Accordion>,
    );

    expect(result.container.firstChild).toMatchSnapshot();
  });
});

describe("accordion [a11y]", () => {
  describe.each(["light", "dark"] as const)("theme: %s", (theme) => {
    beforeEach(() => {
      document.documentElement.setAttribute("data-vesper-theme", theme);
      document.body.style.setProperty("background", "var(--vesper-stone-0)");
    });

    afterEach(() => {
      document.documentElement.removeAttribute("data-vesper-theme");
      document.body.style.removeProperty("background");
    });

    ([true, false] as const).forEach((open) => {
      const label = `a11y (${open ? "open" : "closed"}, ${theme})`;

      test(label, async () => {
        const result = render(
          <Accordion title={TITLE} open={open}>
            {CHILDREN}
          </Accordion>,
        );

        expect(await axe.run(result.container)).toHaveNoViolations();
      });
    });
  });
});
